--- a/rnames_app/templates/structuredname_detail.html
+++ b/rnames_app/templates/structuredname_detail.html
@@ -1,4 +1,6 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Structured Name: {{ structuredname.id }}{% endblock %}
+
 {% block content %}
 <header style="display:none;">
    <h2>RNames - Reference</h2>
