--- a/rnames_app/templates/structuredname_list.html
+++ b/rnames_app/templates/structuredname_list.html
@@ -1,7 +1,5 @@
 {% extends "base_generic.html" %}
-{% block title %}
-  <title>Manage Structured Names</title>
-{% endblock %}
+{% block title %}RNames - Structured Name list{% endblock %}
 
 {% block content %}
   <!-- Write your comments here -->
