--- a/rnames_app/templates/base_generic.html
+++ b/rnames_app/templates/base_generic.html
@@ -8,8 +8,8 @@
 <meta name="description" content="RNames is a stratigraphical database">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>RNames</title>
 
+<title>{% block title %}RNames{% endblock %}</title>
 <style>
   * {box-sizing: border-box}
 
@@ -139,7 +139,7 @@
   <header style="display:none;"><h1>Main Menu</h1></header>
   <nav class="w3-content">
     <ul>
-      <li><a class="list-group-item" href="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Home</a></li>
+      <li><a class="list-group-item" href="{% url 'index' %}"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Home</a></li>
     </ul>
     {% block nav %}
       {% if user.is_authenticated %}
@@ -151,18 +151,18 @@
         <hr>
         <h6>Manage</h6>
         <ul>
-          <li><a href="{% url 'reference-list'%}">References</a></li>
-          <li><a href="{% url 'relation-list'%}">Relations</a></li>
-          <li><a href="{% url 'structuredname-list'%}">Structured Names</a></li>
-          <li><a href="{% url 'name-list'%}">Names</a></li>
-          <li><a href="{% url 'location-list'%}">Locations</a></li>
-          <li><a href="{% url 'qualifier-list'%}">Qualifiers</a></li>
-          <li><a href="{% url 'qualifiername-list'%}">Qualifier Names</a></li>
-          <li><a href="{% url 'stratigraphic-qualifier-list'%}">Stratigraphic Qualifiers</a></li>
+          <li><a href="{% url 'reference-list' %}">References</a></li>
+          <li><a href="{% url 'relation-list' %}">Relations</a></li>
+          <li><a href="{% url 'structuredname-list' %}">Structured Names</a></li>
+          <li><a href="{% url 'name-list' %}">Names</a></li>
+          <li><a href="{% url 'location-list' %}">Locations</a></li>
+          <li><a href="{% url 'qualifier-list' %}">Qualifiers</a></li>
+          <li><a href="{% url 'qualifiername-list' %}">Qualifier Names</a></li>
+          <li><a href="{% url 'stratigraphic-qualifier-list' %}">Stratigraphic Qualifiers</a></li>
         </ul>
         <hr>
         <strong>User: {{ user.get_username }}</strong>
-        <a href="{% url 'logout'%}?next={% url 'index'%}">Logout</a>
+        <a href="{% url 'logout' %}?next={% url 'index' %}">Logout</a>
       {% else %}
         <ul>
           <li><a href="#">Stage Slices</a></li>
@@ -170,28 +170,15 @@
           <li><a href="#">Global Stages</a></li>
         </ul>
         <ul>
-          <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
         </ul>
       {% endif %}
     {% endblock %}
 
   </nav>
   <article class="w3-content">
-  {% block content %}
-  <h2><a name="C4">Welcome to RNames</a></h2>
-  <p>RNames is a relational database linking stratigraphic names with each other that are considered to be time-equivalent or time-overlapping.</p>
-  <p>Each link in the database is drawn from a published reference and is considered as an expressed opinion. The sum of published opinions can be used to correlate a certain name with another name and ultimately to bin within a certain time frame. This is what this database is for. (<a href="{% url 'rnames-detail'%}" target="_blank">more</a>)</p>
-  <p>Currently RNames contains {{ num_names }} Stratigraphic names, {{ num_opinions }} Opinions, and {{ num_references }} References.</p>
-  <img src="https://rnames.luomus.fi/images/argentine.jpg" alt="Geologists at work" align="middle" height="275" width="900">
-  <p></p>
-  <table width="100%">
-    <tr>
-      <td width="50%">RNames is hosted by the <a href="https://www.luomus.fi/en" target="_blank">Finnish Museum of Natural History</a>, an independent research institution functioning under the University of Helsinki.</td>
-      <td width="50%">Rnames was developed by Björn Kröger & Kari Lintulaakso and is based on <a href="http://www.dfg.de/en/" target="_blank">Deutsche Forschungsgemeinschaft</a> (DFG) personal funding, KR 2095/7-1</td>
-    </tr>
-  </table>
-
-  {% endblock %}
+    {% block content %}
+    {% endblock %}
   </article>
 
   <aside>
