--- a/rnames_app/templates/location_detail.html
+++ b/rnames_app/templates/location_detail.html
@@ -1,14 +1,10 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Location: {{ location.id }}{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
 <article>
     <div class="location">
-        {% if location.created_at %}
-            <div class="date">
-                {{ location.created_at }}
-            </div>
-        {% endif %}
         {% if user.is_authenticated %}
           <a class="btn btn-default" href="{% url 'location-edit' pk=location.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'location-delete' pk=location.pk %}"><span class="fa  fa-trash-o"></span></a>
