--- a/rnames_app/templates/location_edit.html
+++ b/rnames_app/templates/location_edit.html
@@ -1,4 +1,5 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Edit Location{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
