--- a/rnames_app/templates/name_list.html
+++ b/rnames_app/templates/name_list.html
@@ -1,4 +1,5 @@
 {% extends "base_generic.html" %}
+{% block title %}RNames - Name list{% endblock %}
 
 {% block content %}
   <!-- Write your comments here -->
