--- a/rnames_app/templates/qualifier_detail.html
+++ b/rnames_app/templates/qualifier_detail.html
@@ -1,37 +1,33 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Qualifier: {{ qualifier.id }}{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
 <article>
     <div class="qualifier">
-        {% if qualifier.created_at %}
-            <div class="date">
-                {{ qualifier.created_at }}
-            </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'qualifier-edit' pk=qualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'qualifier-delete' pk=qualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
-        {% endif %}
-        <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-        <header style="display:none;">
-            <h2>RNames - Qualifier: {{ qualifier.id }}</h2>
-         </header>
-        <table class="w3-table-all">
-          <caption>Qualifier: {{ qualifier.id }}</caption>
-          <tr>
-            <th>Qualifier Name</th>
-            <td>{{ qualifier.qualifier_name }}</td>
-          </tr>
-          <tr>
-            <th>Stratigraphic Qualifier</th>
-            <td>{{ qualifier.stratigraphic_qualifier }}</td>
-          </tr>
-          <tr>
-            <th>Level</th>
-            <td>{{ qualifier.level }}</td>
-          </tr>
-        </table>
+      {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'qualifier-edit' pk=qualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+        <a class="btn btn-default" href="{% url 'qualifier-delete' pk=qualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
+      {% endif %}
+      <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
+      <header style="display:none;">
+          <h2>RNames - Qualifier: {{ qualifier.id }}</h2>
+       </header>
+      <table class="w3-table-all">
+        <caption>Qualifier: {{ qualifier.id }}</caption>
+        <tr>
+          <th>Qualifier Name</th>
+          <td>{{ qualifier.qualifier_name }}</td>
+        </tr>
+        <tr>
+          <th>Stratigraphic Qualifier</th>
+          <td>{{ qualifier.stratigraphic_qualifier }}</td>
+        </tr>
+        <tr>
+          <th>Level</th>
+          <td>{{ qualifier.level }}</td>
+        </tr>
+      </table>
     </div>
   </article>
 {% endblock %}
