--- a/rnames_app/templates/qualifiername_detail.html
+++ b/rnames_app/templates/qualifiername_detail.html
@@ -1,14 +1,10 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Qualifier Name: {{ qualifiername.id }}{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
 <article>
     <div class="qualifiername">
-        {% if qualifiername.created_at %}
-            <div class="date">
-                {{ qualifiername.created_at }}
-            </div>
-        {% endif %}
         {% if user.is_authenticated %}
           <a class="btn btn-default" href="{% url 'qualifiername-edit' pk=qualifiername.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'qualifiername-delete' pk=qualifiername.pk %}"><span class="fa  fa-trash-o"></span></a>
