--- a/rnames_app/templates/relation_detail.html
+++ b/rnames_app/templates/relation_detail.html
@@ -1,14 +1,10 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Relation: {{ relation.id }}{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
 <article>
     <div class="relation">
-        {% if relation.created_at %}
-            <div class="date">
-                {{ relation.created_at }}
-            </div>
-        {% endif %}
         {% if user.is_authenticated %}
           <a class="btn btn-default" href="{% url 'relation-edit' pk=relation.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'relation-delete' pk=relation.pk %}"><span class="fa  fa-trash-o"></span></a>
