--- a/rnames_app/templates/stratigraphic_qualifier_detail.html
+++ b/rnames_app/templates/stratigraphic_qualifier_detail.html
@@ -1,14 +1,10 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Stratigraphic Qualifier: {{ stratigraphicqualifier.id }}{% endblock %}
 
 {% block content %}
 <!-- Write your comments here -->
 <article>
     <div class="qualifier">
-        {% if stratigraphicqualifier.created_at %}
-            <div class="date">
-                {{ stratigraphicqualifier.created_at }}
-            </div>
-        {% endif %}
         {% if user.is_authenticated %}
           <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-edit' pk=stratigraphicqualifier.pk %}"><span class="fa fa-pencil-square-o"></span></a>
           <a class="btn btn-default" href="{% url 'stratigraphic-qualifier-delete' pk=stratigraphicqualifier.pk %}"><span class="fa  fa-trash-o"></span></a>
