--- a/rnames_app/templates/structuredname_edit.html
+++ b/rnames_app/templates/structuredname_edit.html
@@ -1,4 +1,5 @@
 {% extends 'base_generic.html' %}
+{% block title %}RNames - Structured Name{% endblock %}
 
 {% block script %}
 <!-- {{ form.media.js }} used for Django select2 -->
