--- a/rnames_app/templates/relation_list.html
+++ b/rnames_app/templates/relation_list.html
@@ -6,7 +6,8 @@
 <article class="w3-content">
   <form action="" method="get">
       {{ filter.form.as_p }}
-      <input type="submit" />
+      <button type="submit" class="w3-button w3-border w3-hover-light-grey"><i class="fas fa-search"> Search</i></button>
+      <a href="{% url 'relation-list' %}" class="w3-button w3-border w3-hover-light-grey"><i class="fas fa-undo"> Reset filter</i></a>
   </form>
 
   {% if page_obj %}
