Speeding up the API

--- a/rnames_app/templates/base_generic.html
+++ b/rnames_app/templates/base_generic.html
@@ -161,6 +161,7 @@
           <li><a href="{% url 'qualifier-list' %}">Qualifiers</a></li>
           <li><a href="{% url 'qualifiername-list' %}">Qualifier Names</a></li>
           <li><a href="{% url 'stratigraphic-qualifier-list' %}">Stratigraphic Qualifiers</a></li>
+          <li><a href="{% url 'run-binning' %}">Run binning</a></li>
         </ul>
         <hr>
         <strong>User: {{ user.get_username }}</strong>
