--- a/rnames_app/templates/relation_edit.html
+++ b/rnames_app/templates/relation_edit.html
@@ -2,8 +2,8 @@
 {% block title %}RNames - Relation{% endblock %}
 
 {% block script %}
-<!-- {{ form.media.js }} used for Django select2 -->
-{{ form.media.js }}
+  <!-- used for Django select2 -->
+  {{ form.media.js }}
 {% endblock %}
 
 {% block content %}
