--- a/rnames_app/templates/structuredname_detail.html
+++ b/rnames_app/templates/structuredname_detail.html
@@ -1,50 +1,82 @@
 {% extends 'base_generic.html' %}
 {% block title %}RNames - Structured Name: {{ structuredname.id }}{% endblock %}
-
 {% block content %}
 <header style="display:none;">
-   <h2>RNames - Reference</h2>
+  <h2>RNames - Reference</h2>
 </header>
 <!-- Write your comments here -->
 <section class="w3-section">
   {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-    <a class="btn btn-default" href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
+  <a class="btn btn-default" href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+  <a class="btn btn-default" href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
   {% endif %}
   <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
-   <header style="display:none;">
-      <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
-   </header>
-   <table class="w3-table-all">
-      <caption>Structured Name: {{ structuredname.id }}</caption>
-      <tr>
-         <th>Name</th>
-         <td>{{ structuredname.name }}</td>
-      </tr>
-      <tr>
-         <th>Qualifier</th>
-         <td>{{ structuredname.qualifier }}</td>
-      </tr>
-      <tr>
-         <th>Location</th>
-         <td>{{ structuredname.location }}</td>
-      </tr>
-      <tr>
-        <th>Reference</th>
-        {% if structuredname.reference %}
-          <td>{{ structuredname.reference }}</td>
-        {% else %}
-          <td></td>
-        {% endif %}
-      </tr>
-      <tr>
-         <th>Remarks</th>
-         {% if structuredname.remarks %}
-           <td>{{ structuredname.remarks }}</td>
-         {% else %}
-           <td></td>
-         {% endif %}
-      </tr>
-   </table>
+  <header style="display:none;">
+    <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
+  </header>
+  <table class="w3-table-all">
+    <caption>Structured Name: {{ structuredname.id }}</caption>
+    <tr>
+      <th>Name</th>
+      <td>{{ structuredname.name }}</td>
+    </tr>
+    <tr>
+      <th>Qualifier</th>
+      <td>{{ structuredname.qualifier }}</td>
+    </tr>
+    <tr>
+      <th>Location</th>
+      <td>{{ structuredname.location }}</td>
+    </tr>
+    <tr>
+      <th>Reference</th>
+      {% if structuredname.reference %}
+      <td>{{ structuredname.reference }}</td>
+      {% else %}
+      <td></td>
+      {% endif %}
+    </tr>
+    <tr>
+      <th>Remarks</th>
+      {% if structuredname.remarks %}
+      <td>{{ structuredname.remarks }}</td>
+      {% else %}
+      <td></td>
+      {% endif %}
+    </tr>
+  </table>
+  {% if current_relations %}
+  <br>
+  <table class="w3-row">
+    <caption> List of Relations for {{ structuredname }}</caption>
+    <tr>
+      <th>Name</th>
+      <th>Qualifier</th>
+      <th>Stratigraphic Qualifier</th>
+      <th>Level</th>
+      <th>Location</th>
+      <th>Belongs to</th>
+      <th>Action</th>
+    </tr>
+    {% for r in current_relations %}
+    <tr>
+      <td>{{ r.name }}</td>
+      <td>{{ r.qualifier }}</td>
+      <td>{{ r.stratigraphic_qualifier }}</td>
+      <td>{{ r.level }}</td>
+      <td>{{ r.location }}</td>
+      <td>{{ r.belongs_to }}</td>
+      <td>
+        <a class="btn btn-default" href="{% url 'relation_sql-detail' name_one=structuredname.id name_two=r.fk %}"><span class="fa fa-search"></span></a>
+      </td>
+      {% if user.is_authenticated %}
+      {% else %}
+      {% endif %}
+    </tr>
+    {% endfor %}
+  </table>
+  {% else %}
+    <p>There are no Relations yet.</p>
+  {% endif %}
 </section>
 {% endblock %}
