--- a/rnames_app/templates/reference_relation_edit.html
+++ b/rnames_app/templates/reference_relation_edit.html
@@ -51,7 +51,7 @@
     </div>
   </form>
   {% else %}
-  <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
+  <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
   {% endif %}
   <!-- Start of current relations-->
   {% if current_relations %}
