--- a/rnames_app/templates/qualifiername_edit.html
+++ b/rnames_app/templates/qualifiername_edit.html
@@ -12,7 +12,7 @@
       </form>
       <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
     {% else %}
-      <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
+      <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
     {% endif %}
   </article>
 {% endblock %}
