--- a/rnames_app/templates/rnames_app/qualifier_confirm_delete.html
+++ b/rnames_app/templates/rnames_app/qualifier_confirm_delete.html
@@ -11,5 +11,5 @@
   </form>
   <p><a href="{{request.META.HTTP_REFERER}}">Go back</a></p>
 {% else %}
-  <p><a href="{% url 'login'%}?next={{request.path}}">Please login first</a></p>
+  <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
 {% endif %} {% endblock %}
